dts: imx8mm-ash8mm: move linux differences to imx8mm-ash8mm-u-boot.dtsi
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm/dts/imx8mm-ash8mm-u-boot.dtsi
+++ b/arch/arm/dts/imx8mm-ash8mm-u-boot.dtsi
@@ -59,10 +59,69 @@
 
 &i2c1 {
 	u-boot,dm-spl;
+
+	lt8912@48 {
+		port@0 {
+			lt8912_from_panel: endpoint {
+				remote-endpoint = <&panel_to_lt8912>;
+			};
+		};
+	};
 };
 
 &iomuxc {
 	u-boot,dm-spl;
+};
+
+&lcdif {
+	display = <&fb_mipi>;
+};
+
+&mipi_dsi {
+	fb_mipi: panel@0 {
+		bits-per-pixel = <24>;
+		bus-width = <24>;
+		clocks = <&dsim_clk 0>,
+			 <&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
+
+		port@1 {
+			panel_from_dsim: endpoint {
+				remote-endpoint = <&dsim_to_panel>;
+			};
+		};
+
+		port@2 {
+			panel_to_lt8912: endpoint {
+				remote-endpoint = <&lt8912_from_panel>;
+			};
+		};
+	};
+
+	dsim_clk: dsim-clk {
+		#clock-cells = <1>;
+		#size-cells = <0>;
+		compatible = "generic,clk";
+		clocks = <&clk IMX8MMN(CLK_DSI_PHY_REF)>;
+		clock-names = "parent";
+		clock-output-names = "dsim-clk";
+		status = "okay";
+	};
+
+	dsi_host: dsi-host {
+		compatible = "samsung,sec-mipi-dsi";
+		clocks = <&dsim_clk 0>,
+			 <&clk IMX8MMN(CLK_DSI_CORE)>,
+			 <&clk IMX8MMN(CLK_DSI_PHY_REF)>,
+			 <&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
+		clock-names = "dsim-clk", "cfg", "pll-ref", "pixel_clock";
+		status = "okay";
+	};
+
+	port@1 {
+		dsim_to_panel: endpoint {
+			remote-endpoint = <&panel_from_dsim>;
+		};
+	};
 };
 
 &osc_24m {
@@ -130,8 +189,20 @@
 	u-boot,dm-spl;
 };
 
+&uart1 { /* BT */
+	status = "disabled";
+};
+
 &uart2 {
 	u-boot,dm-spl;
+};
+
+&uart3 {
+	status = "disabled";
+};
+
+&uart4 {
+	status = "disabled";
 };
 
 &usbmisc1 {
@@ -159,15 +230,24 @@
 };
 
 &usdhc1 {
+	cap-mmc-highspeed;
+	mmc-ddr-1_8v;
+	mmc-hs200-1_8v;
+	reset-gpios = GP_EMMC_RESET;
 	u-boot,dm-spl;
 };
 
 &usdhc2 {
+	cap-sd-highspeed;
+	sd-uhs-ddr50;
+	sd-uhs-sdr104;
+	sd-uhs-sdr12;
+	sd-uhs-sdr25;
 	u-boot,dm-spl;
 };
 
 &usdhc3 {
-	u-boot,dm-spl;
+	status = "disabled";
 };
 
 &wdog1 {
