--- a/arch/arm/dts/imx8mm-c2-mid-u-boot.dtsi
+++ b/arch/arm/dts/imx8mm-c2-mid-u-boot.dtsi
@@ -3,6 +3,8 @@
  * Copyright 2021 Boundary Devices LLC
  */
 
+#define GP_SN65DSI83_IRQ <&gpio3 20 GPIO_ACTIVE_HIGH>
+
 / {
 	wdt-reboot {
 		compatible = "wdt-reboot";
@@ -65,6 +67,55 @@
 	u-boot,dm-spl;
 };
 
+&lcdif {
+	display = <&fb_mipi>;
+};
+
+&mipi_dsi {
+	fb_mipi: panel@0 {
+		bits-per-pixel = <24>;
+		bus-width = <24>;
+		clocks = <&dsim_clk 0>,
+			 <&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
+
+		mipi_to_lvds: mipi-to-lvds {
+			interrupts-gpios = GP_SN65DSI83_IRQ;
+		};
+
+		port@1 {
+			panel_from_dsim: endpoint {
+				remote-endpoint = <&dsim_to_panel>;
+			};
+		};
+	};
+
+	dsim_clk: dsim-clk {
+		#clock-cells = <1>;
+		#size-cells = <0>;
+		compatible = "generic,clk";
+		clocks = <&clk IMX8MMN(CLK_DSI_PHY_REF)>;
+		clock-names = "parent";
+		clock-output-names = "dsim-clk";
+		status = "okay";
+	};
+
+	dsi_host: dsi-host {
+		compatible = "samsung,sec-mipi-dsi";
+		clocks = <&dsim_clk 0>,
+			 <&clk IMX8MMN(CLK_DSI_CORE)>,
+			 <&clk IMX8MMN(CLK_DSI_PHY_REF)>,
+			 <&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
+		clock-names = "dsim-clk", "cfg", "pll-ref", "pixel_clock";
+		status = "okay";
+	};
+
+	port@1 {
+		dsim_to_panel: endpoint {
+			remote-endpoint = <&panel_from_dsim>;
+		};
+	};
+};
+
 &osc_24m {
 	u-boot,dm-spl;
 	u-boot,dm-pre-reloc;
@@ -106,6 +157,10 @@
 	u-boot,dm-spl;
 };
 
+&uart3 {
+	status = "disabled";
+};
+
 &usbmisc1 {
 	u-boot,dm-spl;
 };
@@ -126,16 +181,17 @@
 	u-boot,dm-spl;
 };
 
-&usdhc1 {
-	u-boot,dm-spl;
-};
 
-&usdhc2 {
+&usdhc1 {
+	cap-mmc-highspeed;
+	mmc-ddr-1_8v;
+	mmc-hs200-1_8v;
+	reset-gpios = GP_EMMC_RESET;
 	u-boot,dm-spl;
 };
 
 &usdhc3 {
-	u-boot,dm-spl;
+	status = "disabled";
 };
 
 &wdog1 {
