--- a/arch/arm/dts/imx8mm-kea-u-boot.dtsi
+++ b/arch/arm/dts/imx8mm-kea-u-boot.dtsi
@@ -3,6 +3,8 @@
  * Copyright 2019 NXP
  */
 
+#define GP_SN65DSI83_IRQ <&gpio1 1 GPIO_ACTIVE_HIGH>
+
 / {
 	wdt-reboot {
 		compatible = "wdt-reboot";
@@ -65,9 +67,76 @@
 	u-boot,dm-spl;
 };
 
+&lcdif {
+	display = <&fb_mipi>;
+};
+
+&mipi_dsi {
+	fb_mipi: panel@0 {
+		bits-per-pixel = <24>;
+		bus-width = <24>;
+		clocks = <&dsim_clk 0>,
+			 <&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
+
+		mipi_to_lvds: mipi-to-lvds {
+			interrupts-gpios = GP_SN65DSI83_IRQ;
+		};
+
+		port@1 {
+			panel_from_dsim: endpoint {
+				remote-endpoint = <&dsim_to_panel>;
+			};
+		};
+
+		port@2 {
+			panel_to_lt8912: endpoint {
+				remote-endpoint = <&lt8912_from_panel>;
+			};
+		};
+	};
+
+	dsim_clk: dsim-clk {
+		#clock-cells = <1>;
+		#size-cells = <0>;
+		compatible = "generic,clk";
+		clocks = <&clk IMX8MMN(CLK_DSI_PHY_REF)>;
+		clock-names = "parent";
+		clock-output-names = "dsim-clk";
+		status = "okay";
+	};
+
+	dsi_host: dsi-host {
+		compatible = "samsung,sec-mipi-dsi";
+		clocks = <&dsim_clk 0>,
+			 <&clk IMX8MMN(CLK_DSI_CORE)>,
+			 <&clk IMX8MMN(CLK_DSI_PHY_REF)>,
+			 <&clk IMX8MMN(CLK_LCDIF_PIXEL)>;
+		clock-names = "dsim-clk", "cfg", "pll-ref", "pixel_clock";
+		status = "okay";
+	};
+
+	port@1 {
+		dsim_to_panel: endpoint {
+			remote-endpoint = <&panel_from_dsim>;
+		};
+	};
+};
+
 &osc_24m {
 	u-boot,dm-spl;
 	u-boot,dm-pre-reloc;
+};
+
+&pca9546 {
+	TOUCHSCREEN_I2C_BUS@0 {
+		lt8912@48 {
+			port@0 {
+				lt8912_from_panel: endpoint {
+					remote-endpoint = <&panel_to_lt8912>;
+				};
+			};
+		};
+	};
 };
 
 &pinctrl_i2c1 {
@@ -130,8 +199,16 @@
 	u-boot,dm-spl;
 };
 
+&uart1 { /* BT */
+	status = "disabled";
+};
+
 &uart2 {
 	u-boot,dm-spl;
+};
+
+&uart4 {
+	status = "disabled";
 };
 
 &usbmisc1 {
@@ -159,15 +236,25 @@
 };
 
 &usdhc1 {
+	cap-mmc-highspeed;
+	mmc-ddr-1_8v;
+	mmc-hs200-1_8v;
+	reset-gpios = GP_EMMC_RESET;
 	u-boot,dm-spl;
 };
 
 &usdhc2 {
+	cap-sd-highspeed;
+	sd-uhs-ddr50;
+	sd-uhs-sdr104;
+	sd-uhs-sdr12;
+	sd-uhs-sdr25;
 	u-boot,dm-spl;
+	vqmmc-supply = <&reg_usdhc2_vqmmc>;
 };
 
 &usdhc3 {
-	u-boot,dm-spl;
+	status = "disabled";
 };
 
 &wdog1 {
