dts: imx8mp-nitrogen8mp: move linux differences to imx8mp-nitrogen8mp-u-boot.dtsi
Signed-off-by: Troy Kisky <troy.kisky@boundarydevices.com>

--- a/arch/arm/dts/imx8mp-nitrogen8mp-u-boot.dtsi
+++ b/arch/arm/dts/imx8mp-nitrogen8mp-u-boot.dtsi
@@ -3,7 +3,13 @@
  * Copyright 2019 NXP
  */
 
+#define GP_SN65DSI83_IRQ <&gpio4 0 GPIO_ACTIVE_HIGH>
+
 / {
+	aliases {
+		t_hdmi = &t_hdmi;
+	};
+
 	wdt-reboot {
 		compatible = "wdt-reboot";
 		wdt = <&wdog1>;
@@ -34,6 +40,13 @@
 	u-boot,dm-pre-reloc;
 };
 
+&eqos {
+	compatible = "fsl,imx-eqos";
+	/delete-property/ assigned-clocks;
+	/delete-property/ assigned-clock-parents;
+	/delete-property/ assigned-clock-rates;
+};
+
 &gpio1 {
 	u-boot,dm-spl;
 };
@@ -52,6 +65,38 @@
 
 &gpio5 {
 	u-boot,dm-spl;
+};
+
+&hdmi {
+	display-timings {
+		t_hdmi: t-hdmi-default {
+			/* m101nwwb by default */
+			clock-frequency = <148500000>;
+			hactive = <1920>;
+			vactive = <1080>;
+			hback-porch = <148>;
+			hfront-porch = <88>;
+			vback-porch = <36>;
+			vfront-porch = <4>;
+			hsync-len = <44>;
+			vsync-len = <5>;
+			hsync-active = <1>;
+			vsync-active = <1>;
+			de-active = <1>;
+		};
+	};
+};
+
+&hdmimix_clk {
+	status = "okay";
+};
+
+&hdmimix_reset {
+	status = "okay";
+};
+
+&hdmi_hpd {
+	status = "okay";
 };
 
 &i2c1 {
@@ -80,6 +125,64 @@
 
 &iomuxc {
 	u-boot,dm-spl;
+};
+
+&lcdif1 {
+	display = <&fb_mipi>;
+	status = "okay";
+};
+
+&lcdif2 {
+	status = "okay";
+};
+
+&lcdif3 {
+	status = "okay";
+};
+
+&mipi_dsi {
+	fb_mipi: panel@0 {
+		bits-per-pixel = <24>;
+		bus-width = <24>;
+		clocks = <&dsim_clk 0>,
+			 <&clk IMX8MP_CLK_MEDIA_DISP1_PIX_ROOT>;
+
+		mipi_to_lvds: mipi-to-lvds {
+			interrupts-gpios = GP_SN65DSI83_IRQ;
+		};
+
+		port@1 {
+			panel_from_dsim: endpoint {
+				remote-endpoint = <&dsim_to_panel>;
+			};
+		};
+	};
+
+	dsim_clk: dsim-clk {
+		#clock-cells = <1>;
+		#size-cells = <0>;
+		compatible = "generic,clk";
+		clocks = <&clk IMX8MP_CLK_MEDIA_MIPI_PHY1_REF>;
+		clock-names = "parent";
+		clock-output-names = "dsim-clk";
+		status = "okay";
+	};
+
+	dsi_host: dsi-host {
+		compatible = "samsung,sec-mipi-dsi";
+		clocks = <&dsim_clk 0>,
+			<&clk IMX8MP_CLK_MEDIA_APB_ROOT>,
+			<&clk IMX8MP_CLK_MEDIA_MIPI_PHY1_REF>,
+			<&clk IMX8MP_CLK_MEDIA_DISP1_PIX_ROOT>;
+		clock-names = "dsim-clk", "cfg", "pll-ref", "pixel_clock";
+		status = "okay";
+	};
+
+	port@1 {
+		dsim_to_panel: endpoint {
+			remote-endpoint = <&panel_from_dsim>;
+		};
+	};
 };
 
 &osc_32k {
@@ -112,15 +215,28 @@
 	u-boot,dm-spl;
 };
 
+&usb_dwc3_0 {
+	dr_mode = "peripheral";
+	/delete-property/ usb-role-switch;
+};
+
 &usdhc1 {
+	cap-sd-highspeed;
+	sd-uhs-ddr50;
+	sd-uhs-sdr104;
+	sd-uhs-sdr12;
+	sd-uhs-sdr25;
 	u-boot,dm-spl;
 };
 
 &usdhc2 {
-	u-boot,dm-spl;
+	status = "disabled";
 };
 
 &usdhc3 {
+	cap-mmc-highspeed;
+	mmc-ddr-1_8v;
+	mmc-hs200-1_8v;
 	u-boot,dm-spl;
 };
 
